Change page titles

--- a/includes/_header.html
+++ b/includes/_header.html
@@ -13,7 +13,7 @@
   
   <link href="<!-- @path favicon.ico -->" rel="shortcut icon">
   
-  <title>New Project</title>
+  <title><!-- $title --> ~ Emmet Condensed Cheat Sheet</title>
   
 </head>
 
