Bit of formatting on the headings

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -24,6 +24,13 @@ h1 {
 	margin-bottom: $vspace;
 }
 
+h2 {
+  width: 100%;
+  color: #666;
+  background-color: #fff;
+  padding: 2px 0 2px 0.3em ;
+}
+
 a {
 	color: #fff;
 	text-decoration: none;
